grammar.txt
program		:	expr
			| expr program

expr		:	def
			| unary
			| ifStatement
			| returnStatement
			| OPAREN expr CPAREN
			| args

optExpr		:	expr
			| *EMPTY*

args		:	unary
			| unary args

optArgs		:	args
			| *EMPTY*

params		:	ID
			| ID params

optParams	:	params
			| *EMPTY*

ifStatement	:	IF OPAREN expr CPAREN expr optElse
			| IF OPAREN expr CPAREN OBRACE program CBRACE optElse

else		:	ELSE ifstatement
			| ELSE expr
			| ELSE OBRACE program CBRACE

optElse		:	else
			| *EMPTY*

def		: 	structDef
			| varDef
			| funcDef

structDef	:	STRUCT unary OBRACKET program CBRACKET

varDef		:	VAR expr SEMI
			| VAR unary expr SEMI

funcDef		:	FUNC unary OPAREN optParams CPAREN OBRACE program CBRACE

returnStatement	:	RETURN expr SEMI

unary		:	IDexpr
			| INTEGER
			| REAL
			| STRING
			| OPAREN expr CPAREN

IDexpr		:	ID
			|| ID OPAREN optArgs CPAREN
